# fault_detection_system_mlops

./: .env.example  .gitignore  Dockerfile  README.md  alerts-server.py  docker-compose.yml  feature_generator.py  pyproject.toml
batch_materialize/: Dockerfile  batch_materialize.py
batch_processing/: Dockerfile  batch_processing.py
inference/: inference.py
ingestion/: ingestion.py
streaming/: streaming.py
training/: training.py
