[project]
name = "progetto-mlops"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "quixstreams",
  "loguru",
]
[dependency-groups]
ingestion = [
  "quixstreams",
  "loguru"
]
training = [
  "loguru",
  "pandas==2.2.0",
  "numpy==1.26.4",
  "pyarrow==14.0.0",
  "scikit-learn==1.4.0",
  "xgboost==2.0.3",
  "matplotlib==3.8.2",
  "mlflow-skinny==2.17",
]
streaming = [
  "quixstreams",
  "redis==5.0.1",
  "loguru==0.7.2",
]
inference = [
  "quixstreams",
  "redis==5.0.1",
  "loguru==0.7.2",
  "pandas==2.2.0",
  "numpy==1.26.4",
  "scikit-learn==1.4.0",
  "xgboost==2.0.3",
  "mlflow==2.17",
]
