[project]
name = "progetto-mlops"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "setuptools==80.8.0",
  "loguru",
  "scikit-learn>=1.4.0",
  "pandas-stubs~=2.2.0",
]
[dependency-groups]
ingestion = [
  "quixstreams>=3.12.0",
  "loguru"
]
training = [
  "loguru",
  "pandas==2.2.0",
  "numpy==1.26.4",
  "pyarrow",
  "scikit-learn==1.4.0",
  "xgboost==2.0.3",
  "matplotlib==3.8.2",
  "mlflow-skinny==2.17",
]
streaming = [
  "quixstreams>=3.12.0",
  "redis==5.0.1",
  "loguru==0.7.2",
]
inference = [
  "quixstreams>=3.12.0",
  "redis==5.0.1",
  "loguru==0.7.2",
  "pandas==2.2.0",
  "numpy==1.26.4",
  "scikit-learn==1.4.0",
  "xgboost==2.0.3",
  "mlflow==2.17",
]
[tool.uv.extra-build-dependencies]
pyarrow = ["pkg_resources"]
